tiledb: update to 2.27.0

--- a/mingw-w64-tiledb/PKGBUILD
+++ b/mingw-w64-tiledb/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=tiledb
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=2.23.0
-pkgrel=5
+pkgver=2.27.0
+pkgrel=1
 pkgdesc="Storage management library for sparse and dense array data (mingw-w64)"
 arch=(any)
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -14,25 +14,27 @@ msys2_references=(
 )
 msys2_repository_url='https://github.com/TileDB-Inc/TileDB/'
 license=("spdx:MIT")
-depends=($([[ ${MINGW_PACKAGE_PREFIX} != *-clang-* ]] || echo "${MINGW_PACKAGE_PREFIX}-aws-sdk-cpp")
-         "${MINGW_PACKAGE_PREFIX}-lz4"
+depends=($([[ ${MINGW_PACKAGE_PREFIX} != *-clang-* ]] || echo \
+            "${MINGW_PACKAGE_PREFIX}-aws-c-common" \
+            "${MINGW_PACKAGE_PREFIX}-aws-crt-cpp" \
+            "${MINGW_PACKAGE_PREFIX}-aws-sdk-cpp")
          "${MINGW_PACKAGE_PREFIX}-bzip2"
-         "${MINGW_PACKAGE_PREFIX}-zlib"
-         "${MINGW_PACKAGE_PREFIX}-zstd"
+         "${MINGW_PACKAGE_PREFIX}-file"
          "${MINGW_PACKAGE_PREFIX}-fmt"
-         "${MINGW_PACKAGE_PREFIX}-spdlog"
+         "${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-libwinpthread-git"
-         "${MINGW_PACKAGE_PREFIX}-file")
+         "${MINGW_PACKAGE_PREFIX}-lz4"
+         "${MINGW_PACKAGE_PREFIX}-spdlog"
+         "${MINGW_PACKAGE_PREFIX}-zlib"
+         "${MINGW_PACKAGE_PREFIX}-zstd")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-catch"
              "${MINGW_PACKAGE_PREFIX}-curl")
 source=("https://github.com/TileDB-Inc/TileDB/archive/${pkgver}/${_realname}-${pkgver}.tar.gz"
-        "001-do-not-use-vcpkg.patch"
         "002-enable-soversion.patch")
-sha256sums=('3a7db2094eb5f01d1fdd8c0e74912cbf78f9f7658f520e84f2c6f647f404ba8c'
-            '6267519ebe64f531f873b1adfd74c46292fbd98bfb1c49a3d2bc84abfd78d549'
+sha256sums=('a1d42e675a983291c1a0edd1a13f70e26649700160bb2bee5d6011a2af55837a'
             '845ccd7b2a73dbce6ab51fa8699f5c3388468e4fe68aa07ae9c1ef51b16edd43')
 noextract=(${_realname}-${pkgver}.tar.gz)
 
@@ -41,7 +43,6 @@ prepare() {
   tar -xzf ${srcdir}/${_realname}-${pkgver}.tar.gz || true
 
   cd ${_realname}-${pkgver}
-  patch -p1 -i "${srcdir}"/001-do-not-use-vcpkg.patch
   patch -p1 -i "${srcdir}"/002-enable-soversion.patch
 }
 
@@ -75,7 +76,7 @@ build() {
     -DTILEDB_SUPERBUILD=OFF \
     -DTILEDB_TESTS=OFF \
     -DTILEDB_WEBP=OFF \
-    -DTILEDB_VCPKG=OFF \
+    -DTILEDB_DISABLE_AUTO_VCPKG=ON \
     -DTILEDB_LIBMAGIC_EP_BUILT=ON \
     ../${_realname}-${pkgver}
 
