tixi: update to 3.3.0

--- a/mingw-w64-tixi/PKGBUILD
+++ b/mingw-w64-tixi/PKGBUILD
@@ -3,38 +3,40 @@
 _realname=tixi
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=2.2.4
-pkgrel=2
+pkgver=3.3.0
+pkgrel=1
 pkgdesc="TiXI is a fast and simple XML interface library (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/DLR-SC/tixi'
 license=('spdx:Apache-2.0')
-makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
-             "${MINGW_PACKAGE_PREFIX}-ninja"
-             "${MINGW_PACKAGE_PREFIX}-python"
-             "${MINGW_PACKAGE_PREFIX}-cmake")
 depends=("${MINGW_PACKAGE_PREFIX}-curl"
-         "${MINGW_PACKAGE_PREFIX}-expat"
          "${MINGW_PACKAGE_PREFIX}-libxml2"
          "${MINGW_PACKAGE_PREFIX}-libxslt")
-source=("${_realname}-${pkgver}.tar.gz::https://github.com/DLR-SC/tixi/archive/v${pkgver}.tar.gz"
+makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
+             "${MINGW_PACKAGE_PREFIX}-cmake"
+             "${MINGW_PACKAGE_PREFIX}-ninja"
+             "${MINGW_PACKAGE_PREFIX}-python")
+source=("https://github.com/DLR-SC/tixi/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz"
         0001-Dont-build-and-install-the-examples.patch
-        0002-Fix-ctypes-DLL-loading-in-Python-3.8-new-policy.patch)
-sha256sums=('9080d2a617b7c411b9b4086de23998ce86e261b88075f38c73d3ce25da94b21c'
-            '81bc8d93195bf3c028beb93b5b2d02f38afaf91242c6a7bd59c1f7c4dd3d484e'
-            'f8f1f685ec634c7362b4aff43f6db34c4cde3168ca28fa194ff990150463eeec')
+        0002-Fix-ctypes-DLL-loading-in-Python-3.8-new-policy.patch
+        0003-fix-build-with-latest-libxml2.patch::https://github.com/DLR-SC/tixi/commit/732f6ad3.patch)
+sha256sums=('988d79ccd53c815d382cff0c244c0bb8e393986377dfb45385792766adf6f6a9'
+            'b3411df0057eef3b8fa4c56e432bf90938fedc0833d3cce9d9c66fbcb7101c42'
+            '9ef13729efb68420f869e21259bce492ee4c66e624bbe5901abe296f56fafc6a'
+            'a87bd7a4ea402bebb298065cd603aa7de291c39b96a2930c30011f88b3740d5f')
 
 prepare() {
   cd "${srcdir}/${_realname}-${pkgver}"
   patch -Np1 -i "${srcdir}/0001-Dont-build-and-install-the-examples.patch"
   patch -Np1 -i "${srcdir}/0002-Fix-ctypes-DLL-loading-in-Python-3.8-new-policy.patch"
+  dos2unix "${srcdir}"/0003-fix-build-with-latest-libxml2.patch
+  patch -Np1 -i "${srcdir}/0003-fix-build-with-latest-libxml2.patch"
 }
 
 
 build() {
-  [[ -d "${srcdir}"/build-${CARCH} ]] && rm -rf "${srcdir}"/build-${CARCH}
-  mkdir -p "${srcdir}"/build-${CARCH} && cd "${srcdir}"/build-${CARCH}
+  mkdir -p "${srcdir}"/build-${MSYSTEM} && cd "${srcdir}"/build-${MSYSTEM}
 
   declare -a extra_config
   if check_option "debug" "n"; then
@@ -47,6 +49,8 @@ build() {
     ${MINGW_PREFIX}/bin/cmake \
       -GNinja \
       -DCMAKE_INSTALL_PREFIX=${MINGW_PREFIX} \
+      -DCMAKE_DLL_NAME_WITH_SOVERSION=ON \
+      -DBUILD_SHARED_LIBS=ON \
       "${extra_config[@]}" \
       ../${_realname}-${pkgver}
 
@@ -55,9 +59,10 @@ build() {
 
 
 package() {
-  cd "${srcdir}"/build-${CARCH}
+  cd "${srcdir}"/build-${MSYSTEM}
 
   DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/cmake --build . --target install
 
-  install -Dm644 "${srcdir}/${_realname}-${pkgver}/LICENSE" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
+  install -Dm644 "${srcdir}/${_realname}-${pkgver}/LICENSE" \
+    "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
 }
