icu: update to 76.1

--- a/mingw-w64-icu/PKGBUILD
+++ b/mingw-w64-icu/PKGBUILD
@@ -5,12 +5,13 @@
 _realname=icu
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=75.1
-pkgrel=2
+pkgver=76.1
+pkgrel=1
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 pkgdesc="International Components for Unicode library (mingw-w64)"
 url="https://icu.unicode.org/home/"
+msys2_repository_url="https://github.com/unicode-org/icu"
 msys2_references=(
   "cpe: cpe:/a:icu-project:international_components_for_unicode"
 )
@@ -20,23 +21,23 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-autotools"
              "autoconf-archive")
 source=(https://github.com/unicode-org/icu/releases/download/release-${pkgver//./-}/icu4c-${pkgver//./_}-src.tgz
+        https://sources.debian.org/data/main/i/icu/76.1-2/debian/patches/reverse_of_ICU-22610.patch
         0011-sbin-dir.mingw.patch
         0012-libprefix.mingw.patch
         0014-mingwize-pkgdata.mingw.patch
         0015-debug.mingw.patch
         0016-icu-pkgconfig.patch
         0021-mingw-static-libraries-without-s.patch
-        0023-fix-twice-include-platform_make_fragment.patch
-        https://github.com/unicode-org/icu/commit/564c92d666354a8ed0f99cba0f239eba790bd148.patch)
-sha256sums=('cb968df3e4d2e87e8b11c49a5d01c787bd13b9545280fc6642f826527618caef'
+        0023-fix-twice-include-platform_make_fragment.patch)
+sha256sums=('dfacb46bfe4747410472ce3e1144bf28a102feeaa4e3875bac9b4c6cf30f4f3e'
+            'c515e2b37e230895080d36207dfe078eb638f974220baa487ede2593e820944c'
             '4f4787caeccf70607cf0cbde0c005f05f5c6de1543265a927839122405b4054f'
             'e7ecdafe85e18a4a4b5f29bbfde38776521a848e5b65089a2379b90e59f1592d'
             'd9f5f756443d7d14175aca06f4f1bb33237b58907e5db7a6ff7e38d2c4ea7957'
             '0181f9ff8b7dd0a423869d8772da0a4feea64188347eb0dee7eb059aea92131c'
             '87ebe8962f8c387714f2a697a664a0c49aed2331b988548069d0c211abc36e05'
             'd8612f40b1731d9a94290afcf80c896184a2f15b8ae8f23b3643c64f6cabfa2f'
-            '12aa647cff22a721bdbceb4e77f5e66c6616e0e050dca8172acfd3365553fff4'
-            'e071322219b1f09175805e2adfea46a27e738950b2eb5d2e50b016af14406e2c')
+            '12aa647cff22a721bdbceb4e77f5e66c6616e0e050dca8172acfd3365553fff4')
 
 # Helper macros to help make tasks easier #
 apply_patch_with_msg() {
@@ -52,6 +53,7 @@ prepare() {
   cd "${srcdir}/icu"
 
   apply_patch_with_msg \
+    reverse_of_ICU-22610.patch \
     0011-sbin-dir.mingw.patch \
     0012-libprefix.mingw.patch \
     0014-mingwize-pkgdata.mingw.patch \
@@ -59,8 +61,6 @@ prepare() {
     0016-icu-pkgconfig.patch \
     0021-mingw-static-libraries-without-s.patch \
     0023-fix-twice-include-platform_make_fragment.patch
-
-  patch -Np2 -i "${srcdir}/564c92d666354a8ed0f99cba0f239eba790bd148.patch"
 
   cd source
   autoreconf -vfi
