nsync: update to 1.29.2

--- a/mingw-w64-nsync/PKGBUILD
+++ b/mingw-w64-nsync/PKGBUILD
@@ -3,23 +3,23 @@
 _realname=nsync
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=1.27.0
+pkgver=1.29.2
 pkgrel=1
 pkgdesc="C library that exports various synchronization primitives (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/google/nsync"
 license=('spdx:Apache-2.0')
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-libwinpthread")
-makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
-             "${MINGW_PACKAGE_PREFIX}-cc"
+makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
+             "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja")
-source=(${_realname}-${pkgver}.tar.gz::https://github.com/google/nsync/archive/${pkgver}.tar.gz
+source=(https://github.com/google/nsync/archive/${pkgver}/${_realname}-${pkgver}.tar.gz
         0001-nsync-mingw-w64.patch
         0002-nsync-clang-fixes.patch)
-sha256sums=('e8e552a358f4a28e844207a7c5cb51767e4aeb0b29e22d23ac2a09924130f761'
-            'c043de7a5116e60717b47d369a2c92859c3fc438e798581700c42277683f652f'
+sha256sums=('1d63e967973733d2c97e841e3c05fac4d3fa299f01d14c86f2695594c7a4a2ec'
+            'f59245d9b3845030d005cfb524efd01167e44b085b0872f1f9de856a0d2c7c48'
             '3c33925b71e13845a1fd6fdc5000cdcb94fedfc54f835ab3caedcf725fe5dffa')
 
 # Helper macros to help make tasks easier #
