qxorm: update to 1.5.0

--- a/mingw-w64-qxorm/PKGBUILD
+++ b/mingw-w64-qxorm/PKGBUILD
@@ -4,22 +4,23 @@ _realname=QxOrm
 pkgbase=mingw-w64-${_realname,,}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname,,}"
          "${MINGW_PACKAGE_PREFIX}-${_realname,,}-docs")
-pkgver=1.4.9
-pkgrel=2
+pkgver=1.5.0
+pkgrel=1
 pkgdesc='A C++ Qt ORM (Object Relational Mapping) and ODM (Object Document Mapper) library (mingw-w64)'
-url='https://www.qxorm.com/'
-msys2_repository_url='https://github.com/QxOrm/QxOrm'
-license=('GPL3')
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
-depends=("${MINGW_PACKAGE_PREFIX}-qt6-base")
+url='https://www.qxorm.com/'
+msys2_repository_url='https://github.com/QxOrm/QxOrm'
+license=('spdx:GPL-3.0-only')
+depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
+         "${MINGW_PACKAGE_PREFIX}-qt6-base")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-doxygen"
              "${MINGW_PACKAGE_PREFIX}-graphviz"
              "${MINGW_PACKAGE_PREFIX}-qt6-tools")
 source=("${msys2_repository_url}/archive/${pkgver}/${_realname}-${pkgver}.tar.gz"
         '0001-qxorm-1.4.9-install.patch')
-sha256sums=('c753e94ea5691d43e219d6bdb3fc35ea2233edb107cc1ee545b815a04952b23c'
+sha256sums=('4e42a15db6a89f08a74f639f805a3c707e3c77b5cab7f66821f07e6a6bc4092e'
             '74b755b0a36c68b39dd291cb324c8bda663d994757908b57b07d7abc8c92c1c6')
 
 prepare() {
@@ -44,7 +45,7 @@ package_qxorm() {
     "${MINGW_PREFIX}"/bin/qmake6.exe CONFIG+=release \
         DEFINES+=_QX_ENABLE_QT_GUI \
         PREFIX="${pkgdir}${MINGW_PREFIX}" \
-        QMAKE_CXXFLAGS_RELEASE+="${CXXFLAGS} ${CPPFLAGS}" \
+        QMAKE_CXXFLAGS_RELEASE+="${CXXFLAGS} ${CPPFLAGS} -Wno-deprecated-declarations" \
         QxOrm.pro
 
     make
