onednn: update to 3.6.2

--- a/mingw-w64-onednn/PKGBUILD
+++ b/mingw-w64-onednn/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=onednn
 pkgbase=mingw-w64-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-${_realname}
-pkgver=3.3.4
-pkgrel=2
+pkgver=3.6.2
+pkgrel=1
 pkgdesc='oneAPI Deep Neural Network Library (oneDNN) (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -15,17 +15,9 @@ depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
-             $([[ ${MINGW_PACKAGE_PREFIX} == *-clang-aarch64* ]] || echo "${MINGW_PACKAGE_PREFIX}-uasm"))
-source=("https://github.com/oneapi-src/oneDNN/archive/v${pkgver}.tar.gz"
-        "001-aarch64-mingw.patch")
-sha256sums=('e291fa4702f4bcfa6c8c23cb5b6599f0fefa8f23bc08edb9e15ddc5254ab7843'
-            'b337b3d21da46b5263f32dc1b779266548bb544288c99c8cd8b56f9835ab00bb')
-
-prepare() {
-  cd "${srcdir}"/${_realname}-${pkgver}
-
-  patch -Np1 -i "${srcdir}"/001-aarch64-mingw.patch
-}
+             $([[ ${CARCH} == aarch64 ]] || echo "${MINGW_PACKAGE_PREFIX}-uasm"))
+source=("https://github.com/oneapi-src/oneDNN/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('e79db0484dcefe2c7ff6604c295d1de2830c828941898878c80dfb062eb344d1')
 
 build() {
   mkdir -p "${srcdir}/build-${MSYSTEM}" && cd "${srcdir}/build-${MSYSTEM}"
@@ -37,12 +29,15 @@ build() {
     extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
   fi
 
+  if [[ ${CARCH} == x86_64 ]]; then
+    extra_config+=('-DCMAKE_ASM_MASM_COMPILER="uasm;-win64"')
+  fi
+
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
   ${MINGW_PREFIX}/bin/cmake \
     -GNinja \
     -DCMAKE_INSTALL_PREFIX=${MINGW_PREFIX} \
-    ${extra_config[@]} \
-    $([[ ${MINGW_PACKAGE_PREFIX} == *-clang-aarch64* ]] || echo -DCMAKE_ASM_MASM_COMPILER="uasm;-win64") \
+    "${extra_config[@]}" \
     -DDNNL_BUILD_EXAMPLES=OFF \
     -DDNNL_BUILD_TESTS=OFF \
     ../oneDNN-$pkgver
@@ -54,5 +49,6 @@ package() {
   cd "${srcdir}/build-${MSYSTEM}"
   DESTDIR="$pkgdir" ${MINGW_PREFIX}/bin/cmake --install .
 
-  install -D -m644 "${srcdir}"/oneDNN-${pkgver}/LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
+  install -D -m644 "${srcdir}"/oneDNN-${pkgver}/LICENSE \
+    "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
 }
