--- a/mingw-w64-unicorn/PKGBUILD
+++ b/mingw-w64-unicorn/PKGBUILD
@@ -4,8 +4,8 @@ _realname=unicorn
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-unicorn"
          "${MINGW_PACKAGE_PREFIX}-python-unicorn")
-pkgver=2.0.1.post1
-pkgrel=5
+pkgver=2.1.1
+pkgrel=1
 pkgdesc="A lightweight multi-platform, multi-architecture CPU emulator framework based on QEMU (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -21,15 +21,15 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-python"
+             "${MINGW_PACKAGE_PREFIX}-python-build"
+             "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 source=("https://github.com/unicorn-engine/unicorn/archive/${pkgver}/${_realname}-${pkgver}.tar.gz"
         "001-bindings-python.patch"
-        "002-getpagesize-clang.patch"
         "003-aarch64.patch")
-sha512sums=('8694d6bc92e3424a8ad050316413d53e56e0f55e7cad7517fb3e98e670a0f1768b060ead8f195da13607cec89a964364f05a8b9d0dc074f4ac5e51026f8343ad'
-            '966ba5eeae1e72c400fc7f6a7f3a9b14afb9b0abf02c53e1ca18b7cad9e84705b8fd86fe8f42fd5d59a4bab312986952cc07119f4b1d70d4973850b16f5e1aa9'
-            'ba35ee611ee312c851a07533caaf8a7a6c6a398fe3544c9ba843a2e3c333859ef0433fbbee28ff0aaa61893f44cea45691339fcc05779a3837ae5fdbdd87577a'
-            'd60d90c34bc23bef3bf2b41421c0b85a88c2905db6bb1c26f5e8cf5c918198c7b1ebccf34202d0f3958eba026a438413f9db573228609f5f91e50f9f66de0bc7')
+sha256sums=('8740b03053162c1ace651364c4c5e31859eeb6c522859aa00cb4c31fa9cbbed2'
+            'c31d1047047bf92638caf353aa658a50a717bcf59e7438803d3b51ce9f41ae0d'
+            'ff1f1fc64c8c2d8c6f4633078290c16c84b78ad6b9521ebfd35ee18e64ceefe9')
 
 apply_patch_with_msg() {
   for _patch in "$@"
@@ -41,17 +41,13 @@ apply_patch_with_msg() {
 
 prepare() {
   cd "${srcdir}"/${_realname}-${pkgver}
-  pwd
 
   apply_patch_with_msg \
     001-bindings-python.patch \
-    002-getpagesize-clang.patch \
     003-aarch64.patch
 }
 
 build() {
-  cd "${srcdir}"/${_realname}-${pkgver}
-
   # Build unicorn
   mkdir -p "${srcdir}/build-${MSYSTEM}" && cd "${srcdir}/build-${MSYSTEM}"
 
@@ -64,20 +60,20 @@ build() {
 
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
     "${MINGW_PREFIX}"/bin/cmake.exe \
+      -GNinja \
       -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
       "${extra_config[@]}" \
-      -GNinja \
       ../${_realname}-${pkgver}
 
   "${MINGW_PREFIX}"/bin/cmake.exe --build .
 
   # Build bindings
-  (cd "${srcdir}"/${_realname}-${pkgver}/bindings
-    ${MINGW_PREFIX}/bin/python const_generator.py python
-  )
-  (cd "${srcdir}"/${_realname}-${pkgver}/bindings/python
-    ${MINGW_PREFIX}/bin/python setup.py build
-  )
+  cp -r "${srcdir}"/${_realname}-${pkgver} "${srcdir}"/python-build-${MSYSTEM}
+  cd "${srcdir}"/python-build-${MSYSTEM}
+  cd bindings
+  ${MINGW_PREFIX}/bin/python const_generator.py python
+  cd python
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 check() {
@@ -91,22 +87,23 @@ package_unicorn() {
 
   DESTDIR="${pkgdir}" "${MINGW_PREFIX}"/bin/cmake.exe --install .
 
-  install -Dm644 "${srcdir}/${_realname}-${pkgver}/COPYING" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING"
-  install -Dm644 "${srcdir}/${_realname}-${pkgver}/COPYING.LGPL2" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING.LGPL2"
-  install -Dm644 "${srcdir}/${_realname}-${pkgver}/COPYING_GLIB" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING_GLIB"
+  install -Dm644 "${srcdir}/${_realname}-${pkgver}/COPYING" \
+    "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING"
+  install -Dm644 "${srcdir}/${_realname}-${pkgver}/COPYING.LGPL2" \
+    "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING.LGPL2"
+  install -Dm644 "${srcdir}/${_realname}-${pkgver}/COPYING_GLIB" \
+    "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING_GLIB"
 }
 
 package_python-unicorn() {
-  depends=("${MINGW_PACKAGE_PREFIX}-python" "${MINGW_PACKAGE_PREFIX}-unicorn")
-  provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-  conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-  replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
+  depends=("${MINGW_PACKAGE_PREFIX}-python"
+           "${MINGW_PACKAGE_PREFIX}-gcc-libs")
 
-  cd "${_realname}-${pkgver}/bindings/python"
+  cd "python-build-${MSYSTEM}"/bindings/python
 
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-  ${MINGW_PREFIX}/bin/python setup.py install --root="${pkgdir}" --prefix="${MINGW_PREFIX}" \
-    -O1 --skip-build
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
 
   install -Dm 644 sample* shellcode.py -t "${pkgdir}${MINGW_PREFIX}/share/doc/python-${_realname}/samples"
 }
