opencl-headers: update to 2024.10.24

--- a/mingw-w64-opencl-icd/PKGBUILD
+++ b/mingw-w64-opencl-icd/PKGBUILD
@@ -3,16 +3,15 @@
 _realname=opencl-icd
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-replaces=("${MINGW_PACKAGE_PREFIX}-${_realname}-git")
 pkgver=2024.05.08
 pkgrel=1
 pkgdesc="OpenCL ICD Loader (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url='https://github.com/KhronosGroup/OpenCL-ICD-Loader'
 msys2_references=(
   'aur: mingw-w64-opencl-icd'
 )
-url='https://github.com/KhronosGroup/OpenCL-ICD-Loader'
 license=('spdx:Apache-2.0')
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
@@ -57,5 +56,6 @@ package() {
   cd "${srcdir}"/build-${MSYSTEM}
   DESTDIR=${pkgdir} ${MINGW_PREFIX}/bin/cmake --install .
 
-  install -Dm644 ${srcdir}/OpenCL-ICD-Loader-${pkgver}/LICENSE ${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE
+  install -Dm644 ${srcdir}/OpenCL-ICD-Loader-${pkgver}/LICENSE \
+    ${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE
 }
