--- a/mingw-w64-opencl-headers/PKGBUILD
+++ b/mingw-w64-opencl-headers/PKGBUILD
@@ -3,19 +3,19 @@
 _realname=opencl-headers
 pkgbase=mingw-w64-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-${_realname}
-pkgver=2024.05.08
+pkgver=2024.10.24
 pkgrel=1
 epoch=2
 pkgdesc='OpenCL (Open Computing Language) header files (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://registry.khronos.org/OpenCL/'
 license=('spdx:Apache-2.0')
-makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
-             "${MINGW_PACKAGE_PREFIX}-ninja"
-             "${MINGW_PACKAGE_PREFIX}-cc")
+makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
+             "${MINGW_PACKAGE_PREFIX}-cmake"
+             "${MINGW_PACKAGE_PREFIX}-ninja")
 source=(https://github.com/KhronosGroup/OpenCL-Headers/archive/v${pkgver}/OpenCL-Headers-${pkgver}.tar.gz)
-sha256sums=('3c3dd236d35f4960028f4f58ce8d963fb63f3d50251d1e9854b76f1caab9a309')
+sha256sums=('159f2a550592bae49859fee83d372acd152328fdf95c0dcd8b9409f8fad5db93')
 
 package() {
   cd "${srcdir}"/OpenCL-Headers-${pkgver}
