--- a/mingw-w64-cas-offinder/PKGBUILD
+++ b/mingw-w64-cas-offinder/PKGBUILD
@@ -7,9 +7,9 @@ pkgver=2.4.1
 pkgrel=5
 pkgdesc='A fast algorithm to search for potential off-target sites of Cas9 RNA-guided endonucleases (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
-license=('BSD')
-url="https://github.com/snugel/${_realname}"
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+license=('spdx:BSD-3-Clause')
+url="https://github.com/snugel/cas-offinder"
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-omp"
          "${MINGW_PACKAGE_PREFIX}-opencl-icd")
@@ -17,7 +17,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-opencl-headers")
-source=(${_realname}-${pkgver}.tar.gz::"${url}/archive/${pkgver}.tar.gz")
+source=("${url}/archive/${pkgver}/${_realname}-${pkgver}.tar.gz")
 sha256sums=('b33b9f39c15abae317ddaf6a4d93cd4dd184a73e8437a1a1c2dc75d933531f84')
 
 build() {
@@ -41,8 +41,10 @@ build() {
 
 package() {
   cd ${srcdir}/${_realname}-${pkgver}
+
   mkdir -p ${pkgdir}${MINGW_PREFIX}/bin/
   cp ${srcdir}/build-${MSYSTEM}/cas-offinder ${pkgdir}${MINGW_PREFIX}/bin/
+
   mkdir -p ${pkgdir}${MINGW_PREFIX}/share/licenses/$_realname
   cp -pf ${srcdir}/${_realname}-${pkgver}/LICENSE \
     ${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}
