--- a/mingw-w64-rhash/PKGBUILD
+++ b/mingw-w64-rhash/PKGBUILD
@@ -3,55 +3,55 @@
 _realname=rhash
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=1.4.4
-pkgrel=3
+pkgver=1.4.5
+pkgrel=1
 pkgdesc="Great utility for computing hash sums (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://sourceforge.net/projects/rhash/'
+msys2_repository_url="https://github.com/rhash/RHash"
 msys2_references=(
   "cpe: cpe:2.3:a:rhash_project:rhash"
 )
+license=('spdx:0BSD')
 depends=("${MINGW_PACKAGE_PREFIX}-gettext-runtime")
-makedepends=("${MINGW_PACKAGE_PREFIX}-autotools"
-             "${MINGW_PACKAGE_PREFIX}-gettext-tools"
-             "${MINGW_PACKAGE_PREFIX}-cc")
-license=('custom' 'BSD')
-source=("${_realname}-${pkgver}.tar.gz"::"https://github.com/rhash/RHash/archive/v${pkgver}.tar.gz"
+makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
+             "${MINGW_PACKAGE_PREFIX}-autotools"
+             "${MINGW_PACKAGE_PREFIX}-gettext-tools")
+source=("https://github.com/rhash/RHash/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz"
         rhash-mingw-install.patch
-        rhash-all-mingw.patch
-        rhash-gettext-flags-escape.patch)
-sha256sums=('8e7d1a8ccac0143c8fe9b68ebac67d485df119ea17a613f4038cda52f84ef52a'
-            '2cbcb1e9ef11b6cac5f178f91a787495d719dc19ddb711a218084eb4cf5f6934'
-            '8358373d8ffb490c27a0c45580c1d3c34468bbd74e3621b02b2de28191d2d56a'
-            '5c62e6eecd3c7e481b7a4b4f7a06dc56470a9a3a1aa3ea131ca801c08b70e160')
+        rhash-all-mingw.patch)
+sha256sums=('6db837e7bbaa7c72c5fd43ca5af04b1d370c5ce32367b9f6a1f7b49b2338c09a'
+            '83cf845d426a5bee7ea21c9d9473328668a7e3d5bdd6e2583f208522f2ee231c'
+            '8358373d8ffb490c27a0c45580c1d3c34468bbd74e3621b02b2de28191d2d56a')
 validpgpkeys=('2875F6B1C2D27A4F0C8AF60B2A714497E37363AE')
 
 prepare() {
   cd "${srcdir}"/RHash-${pkgver}
   patch -Np1 -i ../rhash-mingw-install.patch
   patch -Np1 -i ../rhash-all-mingw.patch
-  patch -Np1 -i ../rhash-gettext-flags-escape.patch
 }
 
 build() {
-  [[ -d "${srcdir}"/build-${CARCH} ]] && rm -rf "${srcdir}"/build-${CARCH}
-  cp -R "${srcdir}"/RHash-${pkgver} "${srcdir}"/build-${CARCH}
-  cd "${srcdir}"/build-${CARCH}
+  [[ -d "${srcdir}"/build-${MSYSTEM} ]] && rm -rf "${srcdir}"/build-${MSYSTEM}
+  cp -R "${srcdir}"/RHash-${pkgver} "${srcdir}"/build-${MSYSTEM}
+  cd "${srcdir}"/build-${MSYSTEM}
+
   ./configure \
      --prefix=${MINGW_PREFIX} \
      --enable-lib-static \
      --enable-lib-shared
+
   make
 }
 
 check() {
-  cd "${srcdir}"/build-${CARCH}
+  cd "${srcdir}"/build-${MSYSTEM}
   make test test-shared test-static || true
 }
 
 package() {
-  cd "${srcdir}"/build-${CARCH}
+  cd "${srcdir}"/build-${MSYSTEM}
   make -j1 install DESTDIR="${pkgdir}"
   make -j1 install install-gmo DESTDIR="${pkgdir}"
 
