unordered-dense: update to 4.5.0

--- a/mingw-w64-unordered-dense/PKGBUILD
+++ b/mingw-w64-unordered-dense/PKGBUILD
@@ -4,21 +4,20 @@
 _realname=unordered_dense
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=4.4.0
+pkgver=4.5.0
 pkgrel=1
 pkgdesc='A fast & densely stored hashmap and hashset (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/martinus/unordered_dense'
 license=('spdx:MIT')
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja")
-source=("${_realname}-${pkgver}.tar.gz"::"https://github.com/martinus/${_realname}/archive/refs/tags/v${pkgver}.tar.gz")
-sha512sums=('82724dd3651f520a240b131fa7cac209d844b9f3a54ea36c8cbb125cb42fdbf5f38d96935f2999e5bf04c447b2b9fde4ebc740decfd7d3d4b7d45177d4f26b58')
+source=("https://github.com/martinus/${_realname}/archive/v${pkgver}${_realname}-${pkgver}.tar.gz")
+sha512sums=('f9c819e28e1c1a387acfee09277d6af5e366597a0d39acf1c687acf0608a941ba966af8aaebdb8fba0126c7360269c4a51754ef4cab17c35c01a30215f953368')
 
 build() {
-  [[ -d ${srcdir}/build-${MSYSTEM} ]] && rm -rf ${srcdir}/build-${MSYSTEM}
   mkdir -p build-${MSYSTEM} && cd build-${MSYSTEM}
 
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
@@ -34,6 +33,8 @@ package() {
   cd ${srcdir}/build-${MSYSTEM}
   DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/cmake.exe --install ./
 
-  install -Dm644 ${srcdir}/${_realname}-${pkgver}/README.md ${pkgdir}${MINGW_PREFIX}/share/doc/${_realname}/README.md
-  install -Dm644 ${srcdir}/${_realname}-${pkgver}/LICENSE ${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE
+  install -Dm644 ${srcdir}/${_realname}-${pkgver}/README.md \
+    ${pkgdir}${MINGW_PREFIX}/share/doc/${_realname}/README.md
+  install -Dm644 ${srcdir}/${_realname}-${pkgver}/LICENSE \
+    ${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE
 }
