--- a/mingw-w64-scons/PKGBUILD
+++ b/mingw-w64-scons/PKGBUILD
@@ -4,31 +4,31 @@ _pyname=SCons
 _realname=scons
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=4.7.0
-pkgrel=3
+pkgver=4.8.1
+pkgrel=1
 pkgdesc="Extensible Python-based build utility (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64' 'mingw32')
-license=('spdx:MIT')
 url="https://scons.org"
 msys2_repository_url="https://github.com/SCons/scons"
 msys2_references=(
   'pypi: SCons'
 )
+license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 options=(!strip)
-source=("https://pypi.org/packages/source/${_pyname::1}/${_pyname}/${_pyname}-${pkgver}.tar.gz"
+source=("https://pypi.org/packages/source/${_pyname::1}/${_pyname}/${_realname}-${pkgver}.tar.gz"
         "0001-fix-mingw-path.patch"
         "0002-fix-missing-man-pages.patch")
-sha256sums=('d8b617f6610a73e46509de70dcf82f76861b79762ff602d546f4e80918ec81f3'
+sha256sums=('5b641357904d2f56f7bfdbb37e165ab996b6143c948b9df0efc7305f54949daa'
             '4416b87da2d7e2879d6f2fd13796887b0a0de3dfffb9be3ec2f565f794a72048'
             'd6c7e88bd810bb32309cded3ddb3ee913b3b06872238e60bfd0f1cd615eaf936')
 
 prepare() {
-  cd "${srcdir}/${_pyname}-${pkgver}"
+  cd "${srcdir}/${_realname}-${pkgver}"
 
   patch -Np1 -i "${srcdir}/0001-fix-mingw-path.patch"
   patch -Np1 -i "${srcdir}/0002-fix-missing-man-pages.patch"
@@ -46,9 +46,6 @@ package() {
   MSYS2_ARG_CONV_EXCL="--prefix=" \
     ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
     --destdir="${pkgdir}" dist/*.whl
-
-  mkdir -p "${pkgdir}${MINGW_PREFIX}"/share/man/man1
-  mv -f "${pkgdir}${MINGW_PREFIX}"/*.1 "${pkgdir}${MINGW_PREFIX}"/share/man/man1
 
   install -D -m644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
 }
