python-jsonpointer: update to 3.0.0

--- a/mingw-w64-python-webrtcvad/PKGBUILD
+++ b/mingw-w64-python-webrtcvad/PKGBUILD
@@ -7,38 +7,38 @@ pkgver=2.0.10
 pkgrel=5
 pkgdesc='Python interface to the Google WebRTC Voice Activity Detector (VAD) (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://pypi.org/project/webrtcvad/"
 msys2_references=(
   'pypi: webrtcvad'
 )
-license=('MIT')
-depends=("${MINGW_PACKAGE_PREFIX}-python-jsonpointer")
+license=('spdx:MIT')
+depends=("${MINGW_PACKAGE_PREFIX}-python"
+         "${MINGW_PACKAGE_PREFIX}-python-jsonpointer")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools"
              "${MINGW_PACKAGE_PREFIX}-cc")
 source=("https://github.com/wiseman/py-webrtcvad/archive/$pkgver.tar.gz")
 sha256sums=('003c7681f7616221f6c4cfb748c9bd2b95a8f5367f16d276c7e984786e510c62')
 
-prepare() {  
+prepare() {
   cd "$srcdir"
-  rm -rf python-build-${CARCH} | true
-  cp -r "py-webrtcvad-$pkgver" "python-build-${CARCH}"
+  rm -rf python-build-${MSYSTEM} | true
+  cp -r "py-webrtcvad-$pkgver" "python-build-${MSYSTEM}"
 }
 
 build() {
-  msg "Python build for ${CARCH}"  
-  cd "${srcdir}/python-build-${CARCH}"
+  cd "${srcdir}/python-build-${MSYSTEM}"
   ${MINGW_PREFIX}/bin/python setup.py build
 }
 
 check() {
-  cd "${srcdir}/python-build-${CARCH}"
+  cd "${srcdir}/python-build-${MSYSTEM}"
   MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
   ${MINGW_PREFIX}/bin/python setup.py test || warning "Tests failed"
 }
 
 package() {
-  cd "${srcdir}/python-build-${CARCH}"
+  cd "${srcdir}/python-build-${MSYSTEM}"
   MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
   ${MINGW_PREFIX}/bin/python setup.py install --prefix=${MINGW_PREFIX} \
     --root="${pkgdir}" --optimize=1 --skip-build
