--- a/mingw-w64-python-jsonpatch/PKGBUILD
+++ b/mingw-w64-python-jsonpatch/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.33
 pkgrel=2
 pkgdesc='An implementation of the JSON Patch format (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'archlinux: python-jsonpatch'
   'pypi: jsonpatch'
@@ -15,7 +15,8 @@ msys2_references=(
 msys2_documentation_url='https://python-json-patch.readthedocs.io/'
 url="https://github.com/stefankoegl/python-json-patch"
 license=('spdx:BSD-3-Clause')
-depends=("${MINGW_PACKAGE_PREFIX}-python-jsonpointer")
+depends=("${MINGW_PACKAGE_PREFIX}-python"
+         "${MINGW_PACKAGE_PREFIX}-python-jsonpointer")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
