--- a/mingw-w64-python-jsonpointer/PKGBUILD
+++ b/mingw-w64-python-jsonpointer/PKGBUILD
@@ -3,15 +3,15 @@
 _realname=jsonpointer
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=2.4
-pkgrel=3
+pkgver=3.0.0
+pkgrel=1
 pkgdesc='Identify specific nodes in a JSON document (RFC 6901) (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url="https://python-json-pointer.readthedocs.org/"
 msys2_references=(
   'pypi: jsonpointer'
 )
-url="https://python-json-pointer.readthedocs.org/"
 license=('spdx:BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
@@ -19,7 +19,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('585cee82b70211fa9e6043b7bb89db6e1aa49524340dde8ad6b63206ea689d88')
+sha256sums=('2b2d729f2091522d61c3b31f82e11870f60b68f43fbc705cb76bf4b832af59ef')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
