python-attrs: update to 24.3.0

--- a/mingw-w64-python-aiosmtpd/PKGBUILD
+++ b/mingw-w64-python-aiosmtpd/PKGBUILD
@@ -7,13 +7,13 @@ pkgver=1.4.6
 pkgrel=3
 pkgdesc="aiosmtpd - asyncio based SMTP server (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url='https://aiosmtpd.aio-libs.org/'
+msys2_repository_url='https://github.com/aio-libs/aiosmtpd'
 msys2_references=(
   'archlinux: python-aiosmtpd'
   'pypi: aiosmtpd'
 )
-msys2_repository_url='https://github.com/aio-libs/aiosmtpd'
-url='https://aiosmtpd.aio-libs.org/'
 license=('spdx:Apache-2.0')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-atpublic"
