--- a/mingw-w64-python-attrs/PKGBUILD
+++ b/mingw-w64-python-attrs/PKGBUILD
@@ -3,16 +3,16 @@
 _realname=attrs
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=23.2.0
-pkgrel=2
+pkgver=24.3.0
+pkgrel=1
 pkgdesc='Attributes without boilerplate (mingw-w64)'
-url='https://attrs.readthedocs.org/'
-license=('spdx:MIT')
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url='https://attrs.readthedocs.org/'
 msys2_references=(
   'pypi: attrs'
 )
+license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
@@ -20,7 +20,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-hatch-vcs"
              "${MINGW_PACKAGE_PREFIX}-python-hatch-fancy-pypi-readme")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('935dc3b529c262f6cf76e50877d35a4bd3c1de194fd41f47a2b7ae8f19971f30')
+sha256sums=('8f5c07333d543103541ba7be0e2ce16eeee8130cb0b3f9238ab904ce1e85baff')
 
 prepare() {
   cd "${srcdir}"
