--- a/mingw-w64-python-cattrs/PKGBUILD
+++ b/mingw-w64-python-cattrs/PKGBUILD
@@ -7,12 +7,12 @@ pkgver=24.1.2
 pkgrel=2
 pkgdesc='Complex custom class converters for attrs (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url="https://catt.rs/"
+msys2_repository_url='https://github.com/python-attrs/cattrs'
 msys2_references=(
   'pypi: cattrs'
 )
-url="https://catt.rs/"
-msys2_repository_url='https://github.com/python-attrs/cattrs'
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-attrs")
