--- a/mingw-w64-python-ufolib2/PKGBUILD
+++ b/mingw-w64-python-ufolib2/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.17.0
 pkgrel=1
 pkgdesc="A library to deal with UFO font sources (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'pypi: ufoLib2'
 )
