python-pytest-localserver: update to 0.9.0.post0

--- a/mingw-w64-python-pytest-localserver/PKGBUILD
+++ b/mingw-w64-python-pytest-localserver/PKGBUILD
@@ -3,38 +3,45 @@
 _realname=pytest-localserver
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=0.8.1
-pkgrel=2
+pkgver=0.9.0.post0
+pkgrel=1
 pkgdesc='py.test plugin to test server connections locally (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url="https://github.com/pytest-dev/pytest-localserver"
 msys2_references=(
   'archlinux: python-pytest-localserver'
   'pypi: pytest-localserver'
 )
-url="https://github.com/pytest-dev/pytest-localserver"
 license=('spdx:MIT')
-depends=("${MINGW_PACKAGE_PREFIX}-python-pytest"
-         "${MINGW_PACKAGE_PREFIX}-python-werkzeug"
-         "${MINGW_PACKAGE_PREFIX}-python-aiosmtpd")
+depends=("${MINGW_PACKAGE_PREFIX}-python"
+         "${MINGW_PACKAGE_PREFIX}-python-werkzeug")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
-             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
-checkdepends=("${MINGW_PACKAGE_PREFIX}-python-requests")
-source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('66569c34fef31a5750b16effd1cd1288a7a90b59155d005e7f916accd3dee4f1')
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools"
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools-scm")
+optdepends=("${MINGW_PACKAGE_PREFIX}-python-aiosmtpd")
+checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest"
+              "${MINGW_PACKAGE_PREFIX}-python-requests")
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname/-/_}-${pkgver}.tar.gz")
+sha256sums=('8033a36fb382d2bc4850f9acfe2c3fb5654cd5f0d163af6daf47f290db7d5ff0')
 
 build() {
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  # Set version for setuptools_scm
+  export SETUPTOOLS_SCM_PRETEND_VERSION=${pkgver}
+
+  cp -r "${_realname/-/_}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 check() {
   cd "${srcdir}/python-build-${MSYSTEM}"
+
   MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
   ${MINGW_PREFIX}/bin/python setup.py install --prefix=${MINGW_PREFIX} \
     --root="$PWD/tmp_install" --optimize=1 --skip-build
-  PYTHONPATH="$PWD/tmp_install/${MINGW_PREFIX}/lib/python3.9/site-packages:$PYTHONPATH" ${MINGW_PREFIX}/bin/py.test || warning "Tests failed"
+
+  PYTHONPATH="$PWD/tmp_install/${MINGW_PREFIX}/lib/python3.12/site-packages:$PYTHONPATH" ${MINGW_PREFIX}/bin/py.test || warning "Tests failed"
 }
 
 package() {
