python-beniget: update to 0.4.2.post1

--- a/mingw-w64-python-beniget/PKGBUILD
+++ b/mingw-w64-python-beniget/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=beniget
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=0.4.2
-pkgrel=2
+pkgver=0.4.2.post1
+pkgrel=1
 pkgdesc="A static analyzer for Python code (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -20,7 +20,7 @@ makedepends=(
   "${MINGW_PACKAGE_PREFIX}-python-setuptools"
 )
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('f689c55330b7434c7c862d4c9bf3d0685c7a0dc5bfae2db8bcdd91a02b6b808a')
+sha256sums=('a0258537e65e7e14ec33a86802f865a667f949bb6c73646d55e42f7c45a052ae')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
