--- a/mingw-w64-python-freetype-py/PKGBUILD
+++ b/mingw-w64-python-freetype-py/PKGBUILD
@@ -3,16 +3,16 @@
 _realname=freetype-py
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=2.4.0
-pkgrel=3
+pkgver=2.5.1
+pkgrel=1
 pkgdesc="Freetype python bindings (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url='https://github.com/rougier/freetype-py'
 msys2_references=(
   'pypi: freetype-py'
 )
-url='https://github.com/rougier/freetype-py'
-license=('BSD')
+license=('spdx:BSD-4-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-freetype")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
@@ -24,7 +24,7 @@ checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
 options=('!strip')
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.zip"
         "0001-fix-loading-freetype-dll.patch")
-sha256sums=('8ad81195d2f8f339aba61700cebfbd77defad149c51f59b75a2a5e37833ae12e'
+sha256sums=('cfe2686a174d0dd3d71a9d8ee9bf6a2c23f5872385cf8ce9f24af83d076e2fbd'
             '41332a871f0edb1da6d5a8aba7c01fa4dd865f4327b51457fc5583bb2f27872c')
 
 prepare() {
