--- a/mingw-w64-python-frozenlist/PKGBUILD
+++ b/mingw-w64-python-frozenlist/PKGBUILD
@@ -3,18 +3,18 @@
 _realname=frozenlist
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=1.4.1
-pkgrel=2
+pkgver=1.5.0
+pkgrel=1
 pkgdesc="A list-like structure which implements collections.abc.MutableSequence (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url='https://frozenlist.aio-libs.org/'
+msys2_repository_url='https://github.com/aio-libs/frozenlist'
+msys2_changelog_url='https://frozenlist.aio-libs.org/en/latest/changes/'
 msys2_references=(
   'archlinux: python-frozenlist'
   'pypi: frozenlist'
 )
-msys2_repository_url='https://github.com/aio-libs/frozenlist'
-msys2_changelog_url='https://frozenlist.aio-libs.org/en/latest/changes/'
-url='https://frozenlist.aio-libs.org/'
 license=('spdx:Apache-2.0')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
@@ -25,7 +25,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-cython")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('c037a86e8513059a2613aaba4d817bb90b9d9b6b69aace3ce9c877e8c8ed402b')
+sha256sums=('81d5af29e61b9c8348e876d442253723928dce6433e0e76cd925cd83f1b4b817')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
