--- a/mingw-w64-python-pyzopfli/PKGBUILD
+++ b/mingw-w64-python-pyzopfli/PKGBUILD
@@ -1,29 +1,30 @@
 # Maintainer: J. Peter Mugaas <jpmugaas@suddenlink.net>
 
+_pyname=zopfli
 _realname=pyzopfli
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-pkgver=0.2.3
-pkgrel=2
+pkgver=0.2.3.post1
+pkgrel=1
 pkgdesc="Python bindings for the Zopfli compressor (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url='https://github.com/fonttools/py-zopfli/'
 msys2_references=(
   'archlinux: python-zopfli'
   'pypi: zopfli'
 )
-url='https://github.com/fonttools/py-zopfli/'
 license=('spdx:Apache-2.0')
-depends=("${MINGW_PACKAGE_PREFIX}-python")
-makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools"
+depends=("${MINGW_PACKAGE_PREFIX}-python"
+         "${MINGW_PACKAGE_PREFIX}-gcc-libs")
+makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
+             "${MINGW_PACKAGE_PREFIX}-python-installer"
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools-scm"
              "${MINGW_PACKAGE_PREFIX}-cc")
-source=("https://files.pythonhosted.org/packages/source/z/zopfli/zopfli-${pkgver}.zip"
+source=("https://pypi.org/packages/source/${_pyname::1}/${_pyname}/${_pyname}-${pkgver}.tar.gz"
         win32-fixes.patch)
-sha256sums=('dbc9841bedd736041eb5e6982cd92da93bee145745f5422f3795f6f258cdc6ef'
+sha256sums=('96484dc0f48be1c5d7ae9f38ed1ce41e3675fd506b27c11a6607f14b49101e99'
             '3adb302978fb0c47adf0eeb641b6674add71fd6af9a22497fbeffb991e78dddd')
 
 # Helper macros to help make tasks easier #
@@ -35,43 +36,29 @@ apply_patch_with_msg() {
   done
 }
 
-del_file_exists() {
-  for _fname in "$@"
-  do
-    if [ -f $_fname ]; then
-      rm -rf $_fname
-    fi
-  done
-}
-# =========================================== #
-
 prepare() {
-  pushd "${srcdir}/zopfli-${pkgver}/zopfli"
-  apply_patch_with_msg win32-fixes.patch
-  popd
-
-  rm -rf python-build-${MSYSTEM} | true
-  cp -r "zopfli-${pkgver}" "python-build-${MSYSTEM}"
+  cd "${srcdir}/${_pyname}-${pkgver}/zopfli"
+  apply_patch_with_msg \
+    win32-fixes.patch
 
   # Set version for setuptools_scm
   export SETUPTOOLS_SCM_PRETEND_VERSION=${pkgver}
 }
 
 build() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  ${MINGW_PREFIX}/bin/python setup.py build
+  cp -r "${_pyname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 check() {
   cd "${srcdir}/python-build-${MSYSTEM}"
-  ${MINGW_PREFIX}/bin/python setup.py check
+  ${MINGW_PREFIX}/bin/python -m pytest || warning "Tests failed"
 }
 
 package() {
   cd "${srcdir}/python-build-${MSYSTEM}"
-
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-  ${MINGW_PREFIX}/bin/python setup.py install --prefix=${MINGW_PREFIX} \
-    --root="${pkgdir}" --optimize=1 --skip-build
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
   install -Dm644 COPYING "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/COPYING"
 }
