python-poetry-core: update to 2.0.0

--- a/mingw-w64-python-poetry-core/PKGBUILD
+++ b/mingw-w64-python-poetry-core/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=poetry-core
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=1.9.1
-pkgrel=2
+pkgver=2.0.0
+pkgrel=1
 pkgdesc="Poetry PEP 517 Build Backend (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -14,21 +14,12 @@ msys2_references=(
 )
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
-makedepends=("${MINGW_PACKAGE_PREFIX}-python-installer"
-             "${MINGW_PACKAGE_PREFIX}-python-build")
+makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
+             "${MINGW_PACKAGE_PREFIX}-python-installer")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest-mock"
               "${MINGW_PACKAGE_PREFIX}-python-pytest")
-source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname/-/_}-${pkgver}.tar.gz"
-        "0002-msys-git-support.patch")
-sha256sums=('7a2d49214bf58b4f17f99d6891d947a9836c9899a67a5069f52d7b67217f61b8'
-            'c22e50ac47fcaba26e9109c0942de4ab9380f3dae2089b37114d4f79c3b8c07b')
-
-prepare() {
-  cd "${srcdir}/${_realname/-/_}-${pkgver}"
-
-  patch -p1 -i ${srcdir}/0002-msys-git-support.patch
-}
-
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname/-/_}-${pkgver}.tar.gz")
+sha256sums=('3317a3cc3932011a61114236b2d49883f4fb1403d2f5e97771ac0d077cfa396f')
 
 build() {
   cp -r "${_realname/-/_}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
