python-google-api-core: update to 2.24.0

--- a/mingw-w64-python-google-api-core/PKGBUILD
+++ b/mingw-w64-python-google-api-core/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=google-api-core
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=2.19.1
-pkgrel=2
+pkgver=2.24.0
+pkgrel=1
 pkgdesc='Google API client core library (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -16,6 +16,7 @@ msys2_references=(
 )
 license=('spdx:Apache-2.0')
 depends=(
+  "${MINGW_PACKAGE_PREFIX}-python"
   "${MINGW_PACKAGE_PREFIX}-python-google-auth"
   "${MINGW_PACKAGE_PREFIX}-python-googleapis-common-protos"
   "${MINGW_PACKAGE_PREFIX}-python-protobuf"
@@ -27,11 +28,11 @@ makedepends=(
   "${MINGW_PACKAGE_PREFIX}-python-installer"
   "${MINGW_PACKAGE_PREFIX}-python-setuptools"
 )
-source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('f4695f1e3650b316a795108a76a1c416e6afb036199d1c1f1f110916df479ffd')
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname//-/_}-${pkgver}.tar.gz")
+sha256sums=('e255640547a597a4da010876d333208ddac417d60add22b6851a0c66a831fcaf')
 
 build() {
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  cp -r "${_realname//-/_}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
