python-glcontext: update to 3.0.0

--- a/mingw-w64-python-glcontext/PKGBUILD
+++ b/mingw-w64-python-glcontext/PKGBUILD
@@ -1,31 +1,30 @@
 # Maintainer: Naveen M K naveen521kk@gmail.com
 
-_pyname=glcontext
 _realname=glcontext
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=2.5.0
-pkgrel=2
+pkgver=3.0.0
+pkgrel=1
 pkgdesc='Portable OpenGL Context (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url="https://moderngl.readthedocs.io/"
+msys2_repository_url="https://github.com/moderngl/glcontext"
 msys2_references=(
   'pypi: glcontext'
 )
-url="https://moderngl.readthedocs.io/"
-msys2_repository_url="https://github.com/moderngl/glcontext"
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools"
              "${MINGW_PACKAGE_PREFIX}-cc")
-source=("${_pyname}-${pkgver}.tar.gz::https://pypi.org/packages/source/${_pyname::1}/${_pyname}/${_pyname}-${pkgver}.tar.gz")
-sha256sums=('0f70d4be0cdd2b532a16da76c8f786b6367754a4086aaadffdbf3e37badbad02')
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('57168edcd38df2fc0d70c318edf6f7e59091fba1cd3dadb289d0aa50449211ef')
 
 prepare() {
   rm -rf python-build-${MSYSTEM} | true
-  cp -r "${_pyname//_/-}-${pkgver}" "python-build-${MSYSTEM}"
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
 }
 
 build() {
