python-types-python-dateutil: update to 2.9.0.20241206

--- a/mingw-w64-python-types-python-dateutil/PKGBUILD
+++ b/mingw-w64-python-types-python-dateutil/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=types-python-dateutil
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=2.9.0.20241003
+pkgver=2.9.0.20241206
 pkgrel=1
 pkgdesc="Typing stubs for python-dateutil. (mingw-w64)"
 arch=('any')
@@ -18,11 +18,11 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 options=('!strip')
-source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('58cb85449b2a56d6684e41aeefb4c4280631246a0da1a719bdbe6f3fb0317446')
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname//-/_}-${pkgver}.tar.gz")
+sha256sums=('18f493414c26ffba692a72369fea7a154c502646301ebfe3d56a04b3767284cb')
 
 build() {
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  cp -r "${_realname//-/_}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
 
   python -m build --wheel --skip-dependency-check --no-isolation
 }
