mapbox-earcut: update to 1.0.3

--- a/mingw-w64-mapbox-earcut/PKGBUILD
+++ b/mingw-w64-mapbox-earcut/PKGBUILD
@@ -4,8 +4,8 @@ _pyname=mapbox_earcut
 _realname=mapbox-earcut
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=1.0.2
-pkgrel=2
+pkgver=1.0.3
+pkgrel=1
 pkgdesc="Python bindings for the mapbox earcut C++ polygon triangulation library. (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -21,13 +21,11 @@ depends=(
 )
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
-             "${MINGW_PACKAGE_PREFIX}-python-setuptools"
-             "${MINGW_PACKAGE_PREFIX}-python-setuptools-scm"
+             "${MINGW_PACKAGE_PREFIX}-python-scikit-build-core"
              "${MINGW_PACKAGE_PREFIX}-pybind11"
-             "${MINGW_PACKAGE_PREFIX}-cc"
-             "${MINGW_PACKAGE_PREFIX}-cmake")
+             "${MINGW_PACKAGE_PREFIX}-cc")
 source=("https://pypi.org/packages/source/${_pyname::1}/${_pyname}/${_pyname}-${pkgver}.tar.gz")
-sha256sums=('83fa0468bcc23f300a1cbf9611bdc30c77aace9ab1d36821649f439490ee7d52')
+sha256sums=('b6bac5d519d9947a6321a699c15d58e0b5740da61b9210ed229e05ad207c1c04')
 
 build() {
   cp -r "${_pyname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
