python-importlib-metadata: update to 8.5.0

--- a/mingw-w64-python-pytest-virtualenv/PKGBUILD
+++ b/mingw-w64-python-pytest-virtualenv/PKGBUILD
@@ -7,13 +7,14 @@ pkgver=1.8.0
 pkgrel=2
 pkgdesc='Virtualenv fixture for py.test (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url="https://github.com/man-group/pytest-plugins"
 msys2_references=(
   'pypi: pytest-virtualenv'
 )
-url="https://github.com/man-group/pytest-plugins"
 license=('spdx:MIT')
 depends=(
+  "${MINGW_PACKAGE_PREFIX}-python"
   "${MINGW_PACKAGE_PREFIX}-python-importlib-metadata"
   "${MINGW_PACKAGE_PREFIX}-python-pytest"
   "${MINGW_PACKAGE_PREFIX}-python-pytest-fixture-config"
