python-setuptools-scm: update to 8.1.0

--- a/mingw-w64-python-setuptools-scm/PKGBUILD
+++ b/mingw-w64-python-setuptools-scm/PKGBUILD
@@ -3,28 +3,28 @@
 _realname=setuptools-scm
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=8.0.4
-pkgrel=2
+pkgver=8.1.0
+pkgrel=1
 pkgdesc='Handles managing your python package versions in scm metadata (mingw-w64)'
-url='https://github.com/pypa/setuptools_scm'
-license=('spdx:MIT')
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url='https://github.com/pypa/setuptools_scm'
 msys2_references=(
   'pypi: setuptools-scm'
 )
+license=('spdx:MIT')
+depends=("${MINGW_PACKAGE_PREFIX}-python"
+         "${MINGW_PACKAGE_PREFIX}-python-packaging"
+         "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer")
-depends=("${MINGW_PACKAGE_PREFIX}-python-packaging"
-         "${MINGW_PACKAGE_PREFIX}-python-setuptools"
-         "${MINGW_PACKAGE_PREFIX}-python-typing_extensions")
-source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('b5f43ff6800669595193fd09891564ee9d1d7dcb196cab4b2506d53a2e1c95c7')
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname/-/_}-${pkgver}.tar.gz")
+sha256sums=('42dea1b65771cba93b7a515d65a65d8246e560768a66b9106a592c8e7f26c8a7')
 
 prepare() {
   cd "${srcdir}"
   rm -rf python-build-${MSYSTEM} | true
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
+  cp -r "${_realname/-/_}-${pkgver}" "python-build-${MSYSTEM}"
 }
 
 build() {
