python-webcolors: update to 24.11.1

--- a/mingw-w64-python-webcolors/PKGBUILD
+++ b/mingw-w64-python-webcolors/PKGBUILD
@@ -3,23 +3,23 @@
 _realname=webcolors
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=24.8.0
-pkgrel=2
+pkgver=24.11.1
+pkgrel=1
 pkgdesc="A library for working with color names and color value formats defined by the HTML and CSS specifications for use in documents on the Web (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url='https://github.com/ubernostrum/webcolors'
 msys2_references=(
   'pypi: webcolors'
 )
-url='https://github.com/ubernostrum/webcolors'
 license=('spdx:BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
-             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
+             "${MINGW_PACKAGE_PREFIX}-python-pdm-backend")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('08b07af286a01bcd30d583a7acadf629583d1f79bfef27dd2c2c5c263817277d')
+sha256sums=('ecb3d768f32202af770477b8b65f318fa4f566c22948673a977b00d589dd80f6')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
