python-six: update to 1.17.0

--- a/mingw-w64-python-six/PKGBUILD
+++ b/mingw-w64-python-six/PKGBUILD
@@ -3,45 +3,39 @@
 _realname=six
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-pkgver=1.16.0
-pkgrel=6
+pkgver=1.17.0
+pkgrel=1
 pkgdesc="Python 2 and 3 compatibility utilities (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url="https://github.com/benjaminp/six"
 msys2_references=(
   'pypi: six'
 )
-url="https://pypi.python.org/pypi/six/"
-license=('MIT')
+license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
-makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools")
+makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
+             "${MINGW_PACKAGE_PREFIX}-python-installer"
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 source=(https://pypi.io/packages/source/${_realname:0:1}/${_realname}/${_realname}-${pkgver}.tar.gz)
-sha256sums=('1e61c37477a1626458e36f7b1d82aa5c9b094fa4802892072e49de9c60c4c926')
-
-prepare() {
-  cd "${srcdir}"
-  cp -r six-${pkgver} python-build-${CARCH}
-}
+sha256sums=('ff70335d468e7eb6ec65b95b99d3a2836546063f63acc5171de367e834932a81')
 
 build() {
-  msg "Python build for ${CARCH}"
-  cd "${srcdir}/python-build-${CARCH}"
-  ${MINGW_PREFIX}/bin/python setup.py build
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 check() {
-  cd ${srcdir}/python-build-${CARCH}
-  ${MINGW_PREFIX}/bin/python setup.py check
+  cd ${srcdir}/python-build-${MSYSTEM}
+  ${MINGW_PREFIX}/bin/python -m pytest
 }
 
 package() {
-  cd ${srcdir}/python-build-${CARCH}
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-  ${MINGW_PREFIX}/bin/python setup.py install --prefix=${MINGW_PREFIX} \
-        --root "${pkgdir}" --optimize=1 --skip-build
+  cd "${srcdir}/python-build-${MSYSTEM}"
 
-  install -Dm644 "${srcdir}/six-${pkgver}/LICENSE" "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
+
+  install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
 }
