python-openmdao: update to 3.36.0

--- a/mingw-w64-python-openmdao/PKGBUILD
+++ b/mingw-w64-python-openmdao/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=openmdao
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=3.34.2
-pkgrel=3
+pkgver=3.36.0
+pkgrel=1
 pkgdesc="An open-source MDAO framework written in Python (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -16,23 +16,16 @@ msys2_references=(
 license=('spdx:Apache-2.0')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-numpy"
-         "${MINGW_PACKAGE_PREFIX}-python-scipy"
          "${MINGW_PACKAGE_PREFIX}-python-networkx"
+         "${MINGW_PACKAGE_PREFIX}-python-packaging"
          "${MINGW_PACKAGE_PREFIX}-python-requests"
-         "${MINGW_PACKAGE_PREFIX}-python-packaging")
+         "${MINGW_PACKAGE_PREFIX}-python-scipy")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-hatchling")
 options=('!strip')
-source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz"
-        "001-accept-numpy-2.patch")
-sha256sums=('3f772f74c99fc2305a872a4761589d4130396ea98a2210d9d1367fcf7fca36ab'
-            '33effa660300b3221e31eb83147f9f65954746d3b6e4e1f4517769e8992103fe')
-
-prepare() {
-  cd ${_realname/-/_}-${pkgver}
-  patch -p1 -i "${srcdir}"/001-accept-numpy-2.patch
-}
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('fe0ba873ccc382590ec33702a6cde5496246992a959e43359e5a211322b01fd1')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
