python-docutils: update to 0.21.2

--- a/mingw-w64-python-docutils/PKGBUILD
+++ b/mingw-w64-python-docutils/PKGBUILD
@@ -4,30 +4,26 @@
 _realname=docutils
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-pkgver=0.20.1
-pkgrel=3
+pkgver=0.21.2
+pkgrel=1
 pkgdesc="Set of tools for processing plaintext docs into formats such as HTML, XML, or LaTeX (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
-license=('custom')
 url="https://docutils.sourceforge.io/"
 msys2_references=(
   'pypi: docutils'
 )
+license=('Public Domain' AND 'spdx:BSD-2-Clause AND ZPL-2.1 AND GPL-3.0-or-later')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=(
   "${MINGW_PACKAGE_PREFIX}-python-build"
   "${MINGW_PACKAGE_PREFIX}-python-installer"
-  "${MINGW_PACKAGE_PREFIX}-python-setuptools"
+  "${MINGW_PACKAGE_PREFIX}-python-flit-core"
+  "${MINGW_PACKAGE_PREFIX}-python-setuptools" # required for pyscript2exe.py
 )
 options=(!strip)
-source=(https://pypi.io/packages/source/${_realname:0:1}/${_realname}/${_realname}-${pkgver}.tar.gz
-        pyscript2exe.py)
-sha256sums=('f08a4e276c3a1583a86dce3e34aba3fe04d02bba2dd51ed16106244e8a923e3b'
-            'e57174517b08cf8f9fb4f43a381d342d23d2db3cad661107f35ca21c39b5734d')
+source=(https://pypi.io/packages/source/${_realname:0:1}/${_realname}/${_realname}-${pkgver}.tar.gz)
+sha256sums=('3a6b18732edf182daa3cd12775bbb338cf5691468f91eeeb109deff6ebfa986f')
 noextract=(${_realname}-${pkgver}.tar.gz)
 
 prepare() {
@@ -56,12 +52,7 @@ package() {
     ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
     --destdir="${pkgdir}" dist/*.whl
 
-  for _f in "${pkgdir}${MINGW_PREFIX}"/bin/*.py; do
-    ${MINGW_PREFIX}/bin/python \
-      "${srcdir}/pyscript2exe.py" "${_f}"
-  done
-
   # setup license
-  install -D -m644 COPYING.txt "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/COPYING.txt"
-  install -D -m644 licenses/python* "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/"
+  install -D -m644 COPYING.txt "${pkgdir}"${MINGW_PREFIX}/share/licenses/python-${_realname}/COPYING.txt
+  install -D -m644 licenses/*.txt "${pkgdir}"${MINGW_PREFIX}/share/licenses/python-${_realname}/
 }
