python-wrapt: update to 1.17.0

--- a/mingw-w64-python-deprecated/PKGBUILD
+++ b/mingw-w64-python-deprecated/PKGBUILD
@@ -7,40 +7,41 @@ pkgver=1.2.15
 pkgrel=1
 pkgdesc="Python @deprecated decorator to deprecate old python classes, functions or methods (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/tantale/deprecated/"
 msys2_references=(
   'pypi: Deprecated'
 )
-license=('MIT')
-depends=("${MINGW_PACKAGE_PREFIX}-python-wrapt")
+license=('spdx:MIT')
+depends=("${MINGW_PACKAGE_PREFIX}-python"
+         "${MINGW_PACKAGE_PREFIX}-python-wrapt")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
-source=("${_realname}-${pkgver}.tar.gz::https://github.com/tantale/deprecated/archive/v${pkgver}.tar.gz")
+source=("https://github.com/tantale/deprecated/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz")
 sha256sums=('ee3f4d9ebef7e592be4f5cc1dc8d1bab4f64d8161598df2261d5e80e4be816bd')
 
 prepare() {
   cd "${srcdir}"
-  rm -rf python-build-${CARCH} | true
-  cp -r "${_realname}-${pkgver}" "python-build-${CARCH}"
+  rm -rf python-build-${MSYSTEM} | true
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
 }
 
 check() {
-  cd "${srcdir}/python-build-${CARCH}"
+  cd "${srcdir}/python-build-${MSYSTEM}"
   ${MINGW_PREFIX}/bin/python setup.py pytest || true
 }
 
 build() {
-  msg "Python build for ${CARCH}"
-  cd "${srcdir}/python-build-${CARCH}"
+  cd "${srcdir}/python-build-${MSYSTEM}"
   ${MINGW_PREFIX}/bin/python setup.py build
 }
 
 package() {
-  cd "${srcdir}/python-build-${CARCH}"
+  cd "${srcdir}/python-build-${MSYSTEM}"
   MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
   ${MINGW_PREFIX}/bin/python setup.py install --prefix=${MINGW_PREFIX} \
     --root="${pkgdir}" --optimize=1 --skip-build
   
-  install -Dm644 "${srcdir}/${_realname}-${pkgver}/LICENSE.rst" "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE.rst"
+  install -Dm644 "${srcdir}/${_realname}-${pkgver}/LICENSE.rst" \
+    "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE.rst"
 }
