--- a/mingw-w64-python-debtcollector/PKGBUILD
+++ b/mingw-w64-python-debtcollector/PKGBUILD
@@ -3,14 +3,11 @@
 _realname=debtcollector
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 pkgver=3.0.0
 pkgrel=2
 pkgdesc="A collection of Python deprecation patterns and strategies that help you collect your technical debt in a non-destructive manner (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://docs.openstack.org/developer/debtcollector'
 msys2_repository_url='https://opendev.org/openstack/debtcollector'
 msys2_changelog_url='https://docs.openstack.org/releasenotes/debtcollector/'
@@ -19,7 +16,8 @@ msys2_references=(
   'pypi: debtcollector'
 )
 license=('spdx:Apache-2.0')
-depends=("${MINGW_PACKAGE_PREFIX}-python-wrapt")
+depends=("${MINGW_PACKAGE_PREFIX}-python"
+         "${MINGW_PACKAGE_PREFIX}-python-wrapt")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-pbr"
