--- a/mingw-w64-python-wrapt/PKGBUILD
+++ b/mingw-w64-python-wrapt/PKGBUILD
@@ -3,14 +3,11 @@
 _realname=wrapt
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-pkgver=1.16.0
-pkgrel=2
+pkgver=1.17.0
+pkgrel=1
 pkgdesc="A Python module for decorators, wrappers and monkey patching (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://pypi.python.org/pypi/wrapt"
 msys2_references=(
   'pypi: wrapt'
@@ -19,8 +16,8 @@ license=('spdx:BSD-2-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools"
              "${MINGW_PACKAGE_PREFIX}-cc")
-source=("${_realname}-${pkgver}.tar.gz::https://github.com/GrahamDumpleton/wrapt/archive/${pkgver}.tar.gz")
-sha256sums=('107dc12b9d60100b7219169dad7687986407dc7bade3ef965b20fe82e1c3a6dc')
+source=("https://github.com/GrahamDumpleton/wrapt/archive/${pkgver}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('2796393a11f86e9565d95acf1eafca02272b918a821cb84d6307a08d281df68c')
 
 prepare() {
   rm -rf python-build-${MSYSTEM} | true
@@ -28,8 +25,6 @@ prepare() {
 }
 
 build() {
-  cd "${srcdir}"
-  msg "Python build for ${MSYSTEM}"
   cd "${srcdir}/python-build-${MSYSTEM}"
   ${MINGW_PREFIX}/bin/python setup.py build
 }
